# LogPSplinePSD

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.rst  README.html  README.rst  V1.py  V2.py  api.html  bayesian_utils.py  coarse_grain.html  coarse_grain_mwe.html  conventions.html  demo.ipynb  demo.py  development.html  genindex.html  gps_penalty_postmortem.md  intro.html  mcmc.py  multivar_blocked_nuts.html  multivar_implementation_notes.html  objects.inv  phi_prior_approx.html  pyproject.toml  requirements.txt  search.html  searchindex.js  test_gammas.py
.github/workflows/: ci.yml  pypi.yml
_sources/: api.rst  coarse_grain.rst  conventions.rst  development.md  multivar_blocked_nuts.rst  multivar_implementation_notes.rst  phi_prior_approx.rst
docs/: .gitignore  Makefile  _config.yaml  _config.yml  _toc.yml  animation_psd_draws.py  api.rst  coarse_grain.rst  coarse_grain_mwe.ipynb  conventions.rst  demo.py  design_shrinkage.md  development.md  intro.rst  multivar_blocked_nuts.rst  multivar_implementation_notes.rst  phi_prior_approx.rst  psd_conventions.md
docs/studies/: data.py  lvk_noise.py
docs/studies/air_quality/: air_quailty.py
docs/studies/brain_EEG/: run_estimation.py
docs/studies/cholesky_decomposition/: alternative_model.py
docs/studies/eta_testing/: README.md  eta_tempering_study.py  eta_validation_study.py
docs/studies/finance_demo/: finance_demo.py
docs/studies/gibbs/: v0.py  v1.py
docs/studies/lisa/: README.md  aggregate_noise_floor_runs.py  bin_doubling_stiffness_check.py  build_runs_table.py  check_preprocessing.py  collect_results.py  debug_data_plot.py  diagnose_wishart_bias.py  eigenvalue_diagnostics.py  empirical_psd_plot.py  eta_sweep.py  evidence_utils.py  lisa_data.py  lisa_datagen.py  lisa_demo.ipynb  lisa_demo.py  lisa_multivar.py  lisa_multivar_matrix.py  lisa_paper_plot.py  lisa_sim.slurm  lisatools_synth_check.py  main.py  main_aet.py  monitor_delta_scaling.py  paper_final_plots.py  plot_duration_eta_study.py  plot_weights_trace.py  run.slurm  run_ci_sweep.sh  run_density_analytical_sanity.sh  run_duration_eta_study.sh  run_duration_eta_study.slurm  run_eta_sweep.sh  run_eta_validation.sh  run_final.sh  run_lisa_sweep.sh  run_noise_floor_hybrid_matrix.sh  run_noise_floor_matrix.sh  run_noise_floor_targeted_matrix.sh  run_paper.sh  (+3 more)
docs/studies/lvk/: analyse_gw150914.py  data.py  lvk_data.py  lvk_demo.ipynb  lvk_noise.py  plot_knot_comparision.py  run_estimator.py
docs/studies/multivar_psd/: 3d_paper_plot.py  3d_study.py  README.md  analyse_knot_scoring_compare.py  change_k.slurm  change_n.slurm  change_time_blocks.py  coarse_grain_study.slurm  coarse_vi_comparison.py  collect_results.py  coverage_tests.py  eta_tempering.slurm  eta_tempering_study.py  final_grid_21x500.slurm  final_results_paper_table_large.md  large_study.slurm  likelihood_slices.py  mode_separation_study.py  multivar_test.py  overplot_posteriors_3x3.py  plot_basis_similarity.py  plot_knot_scoring_diagnostics.py  read_results.py  ridge_direction_likelihood.py  run_3d_study.sh  run_headnode_segment_sweep.sh  run_knot_compare_workflow.sh  run_local_check.sh  run_var3_100.sh  run_var3d_local.sh  segment_vs_coarse_study.slurm  simulation_study.py  var3_mode_sep_matrix.py  var3_mode_separation_study.py  var3_study.py  var3d.slurm  var3d_gps_basis.slurm  var3d_gps_basis_shrink.slurm  var3d_hann_c.slurm  var3d_knots_cholesky.slurm  (+5 more)
docs/studies/paper_plots/: README.rst  generate_lisa_paper_data.py  lisa_paper_job.py  run_all.sh  var3_paper_job.py
docs/studies/presentation/: denoise_image.py  fft_demo.py  graphics.py
docs/studies/runtime/: record_runtime.py
docs/studies/simple_2d/: simple_2d.py
docs/studies/simulation_study/: ar_simulation.py  knots_exploration.py  var2_256_errors.py
docs/studies/svi_test/: svi.py
src/log_psplines/: __init__.py  _jaxtypes.py  _typecheck.py  adaptive_mcmc.py  bayesian_model.py  coarse_grain.py  datasets.py  distributions.py  initialisation.py  logger.py  mcmc.py  mcmc_utils.py  metropolis_hastings.py  parameteric_approximation.py  plotting.py  psd_diagnostics.py  psplines.py  sampling.py  spectrum_utils.py  time_domain_moments.py  types.py
src/log_psplines/arviz_utils/: __init__.py  _datatree.py  compare_results.py  from_arviz.py  rhat.py  to_arviz.py
src/log_psplines/benchmark/: cli.py  cold_start_coarse_vi.py  plotting.py  runtime_benchmark.py
src/log_psplines/coarse_grain/: __init__.py  config.py  jax_ops.py  multivar.py  plotting.py  preprocess.py
src/log_psplines/core/: abc.py
src/log_psplines/datatypes/: __init__.py  multivar.py  multivar_utils.py  univar.py
src/log_psplines/diagnostics/: __init__.py  _factors.py  _utils.py  coarse_grain_checks.py  derived_weights.py  energy.py  mcmc.py  plot_nuts.py  plot_psd.py  plot_vi.py  plotting.py  (+15 more)
studies/lisa/: lisa.html  lisa_demo.html
studies/lvk/: lvk.html  lvk_demo.html
studies/runtime/: runtime.html
tests/: conftest.py  test_adaptive.py  test_arviz_attrs_unit.py  test_arviz_from_arviz.py  test_basis_scale.py  test_benchmark.py  test_cholesky_whittle.py  test_coarse_grain.py  test_coarse_grain_jax_ops.py  test_coarse_vi_init.py  test_design_weights_shrinkage.py  test_diagnostics.py  test_diagnostics_refactor_unit.py  test_diagnostics_summary_fast.py  test_diagnostics_utils.py  test_example_datasets.py  test_gps_penalty.py  test_initialisation.py  test_interpolation_unified_unit.py  test_knot_locator_density_unit.py  test_lisa_eta_sweep_unit.py  test_lisa_evidence_utils_unit.py  test_lisa_inference_unit.py  test_lisa_study_plotting_unit.py  test_lisa_study_preprocessing_unit.py  test_lvk_mcmc.py  test_mcmc.py  test_mcmc_refactor_unit.py  test_metropolis_hastings.py  test_multivar_blocked_noise_floor_hybrid_unit.py  test_multivar_blocked_noise_floor_unit.py  test_multivar_blocked_nuts_eta_unit.py  test_multivar_coarse.py  test_multivar_frequency_exclusion.py  test_multivar_helpers.py  test_multivar_knot_methods_unit.py  test_multivar_nuts_unit.py  test_multivar_psd.py  test_multivar_psplines_quantiles_unit.py  test_multivar_scaling.py  (+35 more)
(+95 files in other folders)
